--- a/style/style.css
+++ b/style/style.css
@@ -21,10 +21,10 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
-/* html, body {
-    width: 97vw;
+html, body {
+    width: 100vw;
     height: 100vh;
-}  */
+} 
 
 /* Header configurations */
 
